# TestRepository

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  collatz_animated_ui.py  collatz_explorer.py  pyproject.toml  setup_env.ps1
.agents/skills/bib_manager/: SKILL.md
.agents/skills/idea_lab/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.md  paper_section.md
.github/workflows/: bibliography-gate.yml  ci.yml
agents/: README.md
agents/orchestrator/: AGENTS.md  INBOX.md
agents/review/: AGENTS.md
analysis/: README.md
docs/: codex.md  mcp.md
docs/agentic/: IMPORTED_FROM_GAZE_ZIP.md  PAPER_PREFLIGHT_GATE.md
docs/ideas/: queue.md
docs/literature/: AUTOMATION.md  INDEX.md
docs/visualizations/: README.md
mcp/: .env-default  README.md  mcp.example.json  mcp.json  start-github-mcp.ps1
paper/: Makefile  README.md  latexmkrc  main.tex  refs.bib  refs.bib.original
paper/figures/: README.md
paper/sections/: appendix_repro.tex  conclusion.tex  experiments.tex  introduction.tex  methods.tex  new_ideas.tex  notation.tex  related_work.tex  visualizations.tex
paper/web/: index.html
scripts/: bib_sanity_check.py  exp_baseline_dataset.py  exp_complex_escape_map.py  exp_generalized_rule_scan.py  exp_residue_transition_graph.py  latex_log_check.py  lit_sync_pipeline.py  plot_baseline_range.py  preflight_related_work.py
src/collatz/: __init__.py  core.py  experiments.py  literature.py  stats.py  viz.py
tests/: test_core.py  test_experiments_complex.py  test_experiments_generalized.py  test_literature.py
(+32 files in other folders)
