[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-lab"
version = "0.1.0"
description = "Reproducible experiments and visualizations for the Collatz (3x+1) conjecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
analysis = ["numpy>=1.26", "pandas>=2.2", "scipy>=1.12"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
